# ImpalaGIS

./: CMakeLists.txt  README_impalagis.md  compile_commands.json  geography_inout-test.cc  geography_inout.cc  geography_inout.h  geography_measurement-test.cc  geography_measurement.cc  geography_measurement.h  lwgeom_functions_basic-test.cc  lwgeom_functions_basic.cc  lwgeom_functions_basic.h  lwgeom_ig.cc  lwgeom_ig.h  lwgeom_internal.h  lwgeom_ogc.h  lwgeom_serializer.cc  lwgeom_serializer.h
